# BIBLI

./: README.md  app.py  config.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  sheets_client.py  sync_books.py
attached_assets/: Pasted-From-the-debug-logs-provided-the-Currently-Reading-section-is-not-being-displayed-because-the-par-1734824523776.txt  Pasted-Here-are-detailed-instructions-for-starting-and-building-your-project-La-Biblioteca-de-Nicholas-fr-1734823519353.txt  Pasted-Here-s-how-you-can-pull-the-Next-Up-data-from-a-separate-third-Google-Sheet-and-position-it-betwee-1734876092758.txt  Pasted-Instructions-for-AI-Developer-to-Add-Image-and-Wikipedia-Link-to-the-Currently-Reading-Section-1-1734829373304.txt  Pasted-The-issue-appears-to-be-with-how-the-Next-Up-section-is-being-populated-Based-on-the-debug-logs--1734876445156.txt  Pasted-The-issue-seems-to-stem-from-the-fact-that-the-Currently-Reading-section-is-not-properly-parsing-o-1734824266766.txt  Pasted-To-insert-the-updated-information-into-Replit-AI-here-s-a-step-by-step-guide-1-Structure-the-Inf-1734824940387.txt
static/css/: custom.css
static/js/: main.js
templates/: base.html  error.html  index.html
