[project]
name = "repl-nix-librarymanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "google-api-python-client>=2.156.0",
    "google-auth>=2.37.0",
    "oauthlib>=3.2.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
]
